--- a/src/components/variables.scss
+++ b/src/components/variables.scss
@@ -4,6 +4,8 @@ $primary-color: #105FAA;
 $accent-color-1: #4CB659;
 $accent-color-2: #FA7D57;
 
+$navbar-z-index: 10;
+
 :export {
   mobile-width: $mobile-width;
 }
